# AccuSphGeom

./: .gitignore  CMakeLists.txt  README.md  REUSE.toml  quick_build.sh
include/accusphgeom/: accusphgeom.hpp
include/accusphgeom/adapters/eigen/: gca_constlat_intersection_eigen.hpp
include/accusphgeom/algorithms/: lat_lon_bounds.hpp  point_in_polygon_sphere.hpp
include/accusphgeom/constructions/: accucross.hpp  gca_constlat_intersection.hpp  gca_gca_intersection.hpp
include/accusphgeom/numeric/: constants.hpp  eft.hpp  simd_fma.hpp  sqrt.hpp
include/accusphgeom/predicates/: orient3d.hpp  quadruple3d.hpp
include/accusphgeom/predicates/detail/: pck_filter_config.hpp
include/spip/algorithms/: point_in_polygon_sphere.hpp
include/spip/predicates/: orient3d.hpp
include/spip/predicates/eft/: basic.hpp  orient3d_eft.hpp  quadruple3d_eft.hpp
src/algorithms/: point_in_polygon_sphere.cpp
src/predicates/: quadruple3d_exact.cpp
tests/: test_constructions.cpp  test_gca_constlat_eigen_pack.cpp  test_gca_gca_eigen_pack.cpp  test_library_usage.cpp  test_pip_complicated.cpp  test_pip_robust.cpp  test_psm_compile.cpp  test_quadruple3d_basic.cpp
tests/performance_test/: README.md  analyze_gca_constlat_saturation.py  benchmark_gca_constlat_SIMDPack.cpp  fp64_GCAconstLat.cc  fp64_GCAconstLat.hh  inspect_perlmutter_compute_unit.sh  plot_gca_constlat_SIMDPack.py  run_and_analyze_gca_constlat_saturation.sh  run_gca_constlat_SIMDPack_benchmark.sh  run_gca_constlat_saturation_sweep.sh
tests/performance_test/gca_constLat/: analyze_gca_constlat_saturation.py  benchmark_gca_constlat_SIMDPack.cpp  benchmark_gca_constlat_try_SIMDPack.cpp  fp64_GCAconstLat.hh  plot_gca_constlat_SIMDPack.py  plot_gca_constlat_try_SIMDPack.py  run_gca_constlat_SIMDPack_benchmark.sh  run_gca_constlat_try_SIMDPack_benchmark.sh
tests/performance_test/gca_constLat/output/: gca_constlat_SIMDPack_timing.csv  gca_constlat_SIMDPack_timing_repeats.csv  gca_constlat_SIMDPack_timing_summary.csv  gca_constlat_pure_fp_SIMDPack_timing.csv  gca_constlat_pure_fp_pack4.csv  gca_constlat_pure_fp_pack4_timing.csv  perlmutter_compute_unit_info.txt
tests/performance_test/gca_gca/: benchmark_gca_gca_SIMDPack.cpp  benchmark_gca_gca_try_SIMDPack.cpp  fp64_GCAGCA.hh  plot_gca_gca_SIMDPack.py  plot_gca_gca_try_SIMDPack.py  run_gca_gca_SIMDPack_benchmark.sh  run_gca_gca_try_SIMDPack_benchmark.sh
tests/performance_test/gca_gca/output/: gca_gca_SIMDPack_timing_repeats.csv  gca_gca_SIMDPack_timing_summary.csv  gca_gca_try_benchmark.55449052.err
tests/performance_test/output/: gca_constlat_SIMDPack_timing_repeats.csv  gca_constlat_SIMDPack_timing_summary.csv  gca_constlat_saturation_sweep.csv
tests/performance_test/output/saturation_runs/: gca_constlat_repeats_data_100000.csv  gca_constlat_repeats_data_1000000.csv  gca_constlat_repeats_data_200000.csv  gca_constlat_repeats_data_2000000.csv  gca_constlat_repeats_data_500000.csv  gca_constlat_summary_data_100000.csv  gca_constlat_summary_data_1000000.csv  gca_constlat_summary_data_200000.csv  gca_constlat_summary_data_2000000.csv  gca_constlat_summary_data_500000.csv
